--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-transition-group": "^4.2.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
