--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.2.0",
+    "redux": "^4.0.1",
     "styled-components": "^4.3.2"
   },
   "scripts": {
