--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "1-1jianshu",
+    "name": "jianshu",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://xionglong58.github.io/jianshu",
     "dependencies": {
         "axios": "^0.19.0",
         "immutable": "^4.0.0-rc.12",
@@ -23,6 +24,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
+        "predeploy": "npm run build",
         "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
