--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "react-transition-group": "^4.2.0",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "redux-thunk": "^2.3.0"    
   },
   "scripts": {
     "start": "react-scripts start",
