--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jianshu",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://xionglong58.github.io/jianshu",
+  "homepage": "https://xionglong58.github.io/jianshu/",
   "dependencies": {
     "axios": "^0.19.0",
     "immutable": "^4.0.0-rc.12",
